discussion/kv_engine/172222/172222_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51413: test

Change-Id: I0dee633ff0a9261c21a37b39ef1bee8f1b312eab

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-03-16 09:54:45.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-16 10:26:04.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44487/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44487/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16873/ : ABORTED

Failure of GoogleTest "CouchstoreOrMagma/KVStoreErrorInjectionTest.WarmupVBucketWithoutState/persistent_couchstore_value_only":

<pre>
[ RUN      ] CouchstoreOrMagma/KVStoreErrorInjectionTest.WarmupVBucketWithoutState/persistent_couchstore_value_only
[2022-03-16T10:25:10.123Z] 2022-03-16T03:25:09.589140-07:00 CRITICAL (SynchronousEPEngine:default) Warmup::populateVBucketMap() flush state failed for vb:0 highSeqno:0, write traffic will be disabled for this node.
[2022-03-16T10:25:10.123Z] 2022-03-16T03:25:09.597411-07:00 CRITICAL (SynchronousEPEngine:default) WarmupBackfillTask::run(): caught exception while running backfill - aborting warmup: WarmupVbucketVisitor::visit(): vb:0 shardId:0 failed to create BySeqnoScanContext, for backfill task:"Warmup - key dump shard 0"
[2022-03-16T10:25:10.123Z] ../kv_engine/engines/ep/tests/module_tests/kvstore_error_injection_test.cc:895: Failure
[2022-03-16T10:25:10.123Z] Expected: runReadersUntilWarmedUp() doesn"t throw an exception.
[2022-03-16T10:25:10.123Z]   Actual: it throws std::logic_error with description "CheckedExecutor failed fetchNextTask".
[2022-03-16T10:25:10.123Z] ../kv_engine/engines/ep/tests/module_tests/kvstore_error_injection_test.cc:896: Failure
[2022-03-16T10:25:10.123Z] Expected equality of these values:
[2022-03-16T10:25:10.123Z]   WarmupState::State::Done
[2022-03-16T10:25:10.123Z]     Which is: 4-byte object <0B-00 00-00>
[2022-03-16T10:25:10.123Z]   engine->getKVBucket()->getWarmup()->getWarmupState()
[2022-03-16T10:25:10.123Z]     Which is: 4-byte object <06-00 00-00>
[2022-03-16T10:25:10.123Z] [  FAILED  ] CouchstoreOrMagma/KVStoreErrorInjectionTest.WarmupVBucketWithoutState/persistent_couchstore_value_only, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=value_only" (28 ms)
CouchstoreOrMagma/KVStoreErrorInjectionTest.WarmupVBucketWithoutState/persistent_couchstore_value_only
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16873/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16873/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18833/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18129/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18129/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17802/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17802/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26209/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5749/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5749/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16033/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16033/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10:
error: "hdr_histogram.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16033/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14954/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/engines/ep/tests/mock/mock_couch_kvstore.h b/engines/ep/tests/mock/mock_couch_kvstore.h
index f50f53c35..1b65e67cd 100644
--- a/engines/ep/tests/mock/mock_couch_kvstore.h
+++ b/engines/ep/tests/mock/mock_couch_kvstore.h
@@ -120,7 +120,8 @@ public:
 
         updateLocalDocuments(*db, pendingLocalReqsQ);
 
-        errCode = couchstore_commit(db, [](const std::system_error&amp;){return true;});
+        errCode = couchstore_commit(
+                db, [](const std::system_error&amp;) { return true; });
 
         return !errCode;
     }
diff --git a/engines/ep/tests/module_tests/kvstore_error_injection_test.cc b/engines/ep/tests/module_tests/kvstore_error_injection_test.cc
index 88a3b89df..0c0f2966d 100644
--- a/engines/ep/tests/module_tests/kvstore_error_injection_test.cc
+++ b/engines/ep/tests/module_tests/kvstore_error_injection_test.cc
@@ -85,7 +85,8 @@ public:
 
     void failAllSnapshotVBuckets() override {
         using namespace testing;
-        EXPECT_CALL(ops, sync(_, _)).WillRepeatedly(Return(COUCHSTORE_ERROR_WRITE));
+        EXPECT_CALL(ops, sync(_, _))
+                .WillRepeatedly(Return(COUCHSTORE_ERROR_WRITE));
     }
 
     bool deleteLocalDoc(Vbid vbid, std::string_view key) override {
@@ -122,9 +123,7 @@ public:
     }
 
     void failAllSnapshotVBuckets() override {
-        kvstore-&gt;snapshotVBucketErrorInjector = []() {
-            return false;
-        };
+        kvstore-&gt;snapshotVBucketErrorInjector = []() { return false; };
     }
 
     bool deleteLocalDoc(Vbid vbid, std::string_view key) override {
@@ -893,7 +892,8 @@ TEST_P(KVStoreErrorInjectionTest, WarmupVBucketWithoutState) {
     // Before the fix we would fail during a warmup backfill as magma would not
     // create a scan context if a vBucket state did not exist on disk.
     EXPECT_NO_THROW(runReadersUntilWarmedUp());
-    EXPECT_EQ(WarmupState::State::Done, engine-&gt;getKVBucket()-&gt;getWarmup()-&gt;getWarmupState());
+    EXPECT_EQ(WarmupState::State::Done,
+              engine-&gt;getKVBucket()-&gt;getWarmup()-&gt;getWarmupState());
 }
 
 INSTANTIATE_TEST_SUITE_P(

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14954/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37448/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5691/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
